fixed inertial scrolling on iOS Safari

--- a/src/app/common/components/MainView.scss
+++ b/src/app/common/components/MainView.scss
@@ -16,6 +16,7 @@
 	left: 0;
 	overflow: auto;
 	padding: 0 10px;
+	-webkit-overflow-scrolling: touch;
 }
 .main-view > .scroll-container > .scroll-content {
 	max-width: 850px;
